new layout for page

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
         <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
         <!--<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />-->
         <!--<link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />-->
-        <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+        <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
         <link href="stylesheets/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="stylesheets/font-awesome.css">
+        <link href="stylesheets/font-awesome.css" rel="stylesheet">
         <style>
             .bgrnd {
                 text-transform: uppercase;
                 text-align: center;
                 font-family:Arial Black;
                 color: #e7e7e7;
+                background-color: black;
             }
         </style>
         <!--[if lt IE 9]>
@@ -26,17 +27,45 @@
     <body>
         <div class="container">
             <div class="row">
-                <h1 class="bgrnd">Tomi</h1>
-            </div>
-            <div class="row">
-                <h1 class="bgrnd">Savolainen</h1>
+                <h1 class="span12 bgrnd">Tomi Savolainen</h1>
             </div>
             <br/>
-            <div class="row" style="font-size: 30px">
-                <div class="span3 icon-twitter-sign icon-large"><a href="http://twitter.com/tomi_savolainen">Twitter</a></div>
-                <div class="span3 icon-linkedin-sign icon-large"><a href="http://www.linkedin.com/in/xhawk">LinkedIn</a></div>
-                <div class="span3 icon-github-sign icon-large"><a href="http://github.com/xhawk">github</a></div>
-                <div class="span3 icon-envelope icon-large"><a href="mailto:firstname.lastname@tomisavolainen.net">email</a></div>
+            <div class="row" style="height: 50px;">
+                <div class="offset2 span3" style="">
+                    <div style="font-size: 30px">
+                        <div class="icon-twitter-sign icon-large">
+                            <a href="http://twitter.com/tomi_savolainen">Twitter</a>
+                        </div>
+                    </div>
+                    <div class="">Follow me</div>
+                </div>
+                <div class="offset2 span3" style="">
+                    <div style="font-size: 30px">
+                        <div class="icon-linkedin-sign icon-large">
+                            <a href="http://www.linkedin.com/in/xhawk">LinkedIn</a>
+                        </div>
+                    </div>
+                    <div class="">Connect with me</div>
+                </div>
+            </div>
+            <br />
+            <div class="row" style="height: 50px;">
+                <div class="offset2 span3" style="">
+                    <div style="font-size: 30px">
+                        <div class="icon-github-sign icon-large">
+                            <a href="http://github.com/xhawk">github</a>
+                        </div>
+                    </div>
+                    <div class="">Follow what I do</div>
+                </div>
+                <div class="offset2 span3" style="">
+                    <div style="font-size: 30px">
+                        <div class="icon-envelope icon-large">
+                            <a href="mailto:firstname.lastname@tomisavolainen.net">email</a>
+                        </div>
+                    </div>
+                    <div class="">Mail me</div>
+                </div>
             </div>
         </div>
     </body>
