--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="container">
             <div class="row">
                 <h1 class="span12 bgrnd">Tomi Savolainen</h1>
+                <p class="span12">Currently working as an agile hedgehog in <a href="http://www.siili.fi">Siili Solutions</a></p>
             </div>
             <br/>
             <div class="row" style="height: 50px;">
