--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <div class="container">
             <div class="row">
                 <h1 class="span12 bgrnd">Tomi Savolainen</h1>
-                <p class="span12">Currently working as an agile hedgehog in <a href="http://www.siili.fi">Siili Solutions</a></p>
+                <p class="span12">Currently working as an agile hedgehog in <a target="_blank" href="http://www.siili.fi">Siili Solutions</a></p>
             </div>
             <br/>
             <div class="row" style="height: 50px;">
                 <div class="offset2 span3" style="">
                     <div style="font-size: 30px">
                         <div class="icon-twitter-sign icon-large">
-                            <a href="http://twitter.com/tomi_savolainen">Twitter</a>
+                            <a target="_blank" href="http://twitter.com/tomi_savolainen">Twitter</a>
                         </div>
                     </div>
                     <div class="">Follow me</div>
@@ -42,7 +42,7 @@
                 <div class="offset2 span3" style="">
                     <div style="font-size: 30px">
                         <div class="icon-linkedin-sign icon-large">
-                            <a href="http://www.linkedin.com/in/xhawk">LinkedIn</a>
+                            <a target="_blank" href="http://www.linkedin.com/in/xhawk">LinkedIn</a>
                         </div>
                     </div>
                     <div class="">Connect with me</div>
@@ -53,7 +53,7 @@
                 <div class="offset2 span3" style="">
                     <div style="font-size: 30px">
                         <div class="icon-github-sign icon-large">
-                            <a href="http://github.com/xhawk">github</a>
+                            <a target="_blank" href="http://github.com/xhawk">github</a>
                         </div>
                     </div>
                     <div class="">Follow what I do</div>
