--- a/index.html
+++ b/index.html
@@ -4,20 +4,12 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-        <!--<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />-->
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
         <!--<link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />-->
         <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
         <link href="stylesheets/bootstrap.css" rel="stylesheet">
         <link href="stylesheets/font-awesome.css" rel="stylesheet">
-        <style>
-            .bgrnd {
-                text-transform: uppercase;
-                text-align: center;
-                font-family:Arial Black;
-                color: #e7e7e7;
-                background-color: black;
-            }
-        </style>
+
         <!--[if lt IE 9]>
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
@@ -25,47 +17,24 @@
     </head>
     <body>
         <div class="container">
-            <div class="row">
+            <div class="row nameheader">
                 <h1 class="span12 bgrnd">Tomi Savolainen</h1>
-                <p class="span12">Currently working as an agile hedgehog in <a target="_blank" href="http://www.siili.fi">Siili Solutions</a></p>
+                <p>Currently working as an agile hedgehog in <a target="_blank" href="http://www.siili.fi">Siili Solutions</a></p>
             </div>
             <br/>
-            <div class="row" style="height: 50px;">
-                <div class="offset2 span3" style="">
-                    <div style="font-size: 30px">
-                        <div class="icon-twitter-sign icon-large">
-                            <a target="_blank" href="http://twitter.com/tomi_savolainen">Twitter</a>
-                        </div>
-                    </div>
-                    <div class="">Follow me</div>
-                </div>
-                <div class="offset2 span3" style="">
-                    <div style="font-size: 30px">
-                        <div class="icon-linkedin-sign icon-large">
-                            <a target="_blank" href="http://www.linkedin.com/in/xhawk">LinkedIn</a>
-                        </div>
-                    </div>
-                    <div class="">Connect with me</div>
-                </div>
-            </div>
-            <br />
-            <div class="row" style="height: 50px;">
-                <div class="offset2 span3" style="">
-                    <div style="font-size: 30px">
-                        <div class="icon-github-sign icon-large">
-                            <a target="_blank" href="http://github.com/xhawk">github</a>
-                        </div>
-                    </div>
-                    <div class="">Follow what I do</div>
-                </div>
-                <div class="offset2 span3" style="">
-                    <div style="font-size: 30px">
-                        <div class="icon-envelope icon-large">
-                            <a href="mailto:firstname.lastname@tomisavolainen.net">email</a>
-                        </div>
-                    </div>
-                    <div class="">Mail me</div>
-                </div>
+            <div class="social-icons">
+              <a class="" target="_blank" href="http://twitter.com/tomi_savolainen">
+                <i class="icon-twitter-sign icon-large"></i>
+              </a>
+              <a class="" target="_blank" href="http://www.linkedin.com/in/xhawk">
+                <i class="icon-linkedin-sign icon-large"></i>
+              </a>
+              <a class="" target="_blank" href="http://github.com/xhawk">
+                <i class="icon-github-sign icon-large"></i>
+              </a>
+              <a class="" href="mailto:firstname.lastname@tomisavolainen.net">
+                <i class="icon-envelope icon-large"></i>
+              </a>
             </div>
         </div>
     </body>
