--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
         <!--<link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />-->
         <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
         <link href="stylesheets/bootstrap.css" rel="stylesheet">
         <link href="stylesheets/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
 
         <!--[if lt IE 9]>
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,7 +18,7 @@
     <body>
         <div class="container">
             <div class="row nameheader">
-                <h1 class="span12 bgrnd">Tomi Savolainen</h1>
+                <h1 class="span4 bgrnd">Tomi</h1><h1 class="span8 bgrnd">Savolainen</h1>
                 <p>Currently working as an agile hedgehog in <a target="_blank" href="http://www.siili.fi">Siili Solutions</a></p>
             </div>
             <br/>
