--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row nameheader">
                 <h1 class="span4 bgrnd">Tomi</h1><h1 class="span8 bgrnd">Savolainen</h1>
-                <p>Currently working as an agile hedgehog in <a target="_blank" href="http://www.siili.fi">Siili Solutions</a></p>
+                <p>Currently working as a developer of things in <a target="_blank" href="http://www.soikea.com">Soikea Solutions</a></p>
             </div>
             <br/>
             <div class="social-icons">
