--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
         <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
@@ -16,11 +17,11 @@
         <title>Tomi Savolainen by xhawk</title>
     </head>
     <body>
-        <div class="container">
-            <div class="row nameheader">
-                <h1 class="span4 bgrnd">Tomi</h1><h1 class="span8 bgrnd">Savolainen</h1>
-                <p>Currently working as a developer of things in <a target="_blank" href="http://www.soikea.com">Soikea Solutions</a></p>
+        <div class="container-fluid">
+            <div class="row-fluid nameheader">
+                <h1 class="bgrnd">Tomi Savolainen</h1>
             </div>
+            <p class="row-fluid" style="text-align: center">Currently working as a developer of things in <a target="_blank" href="http://www.soikea.com">Soikea Solutions</a></p>
             <br/>
             <div class="social-icons">
               <a class="" target="_blank" href="http://twitter.com/tomi_savolainen">
