--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="row-fluid nameheader">
                 <h1 class="bgrnd">Tomi Savolainen</h1>
             </div>
-            <p class="row-fluid" style="text-align: center">Currently working as a developer of things in <a target="_blank" href="http://www.soikea.com">Soikea Solutions</a></p>
+            <p class="row-fluid" style="text-align: center">Currently working as a senior consultant in <a target="_blank" href="http://www.orangit.fi">OrangIT</a></p>
             <br/>
             <div class="social-icons">
               <a class="" target="_blank" href="http://twitter.com/tomi_savolainen">
